--- a/src/app/component/expense-form/expense-form.component.html
+++ b/src/app/component/expense-form/expense-form.component.html
@@ -1,5 +1,5 @@
 <form (ngSubmit)="onSubmit()" #expenseForm="ngForm">
-    <div style="width: 400px;">
+    <div style="width: 500px;">
         <div class="rowdiv">
             <div class="labeldiv"><label for="date">Date: </label></div>
             <div class="valuediv">
@@ -10,45 +10,94 @@
             <div class="labeldiv"><label for="payee">Payee: </label></div>
             <div class="valuediv">
                 <p-select [options]="payees" [(ngModel)]="expense.payee" name="payee" optionLabel="name" required
-                (onChange)="loadPayeeDefaults()" [filter]="true" filterBy="name" class="selector"/>
+                    (onChange)="loadPayeeDefaults()" [filter]="true" filterBy="name" class="selector" />
             </div>
         </div>
         <div class="rowdiv">
             <div class="labeldiv"><label for="account">Account: </label></div>
             <div class="valuediv">
-                <p-select [options]="accounts" [(ngModel)]="expense.account" name="account" optionLabel="name" required class="selector"/>
+                <p-select [options]="accounts" [(ngModel)]="expense.account" name="account" optionLabel="name" required
+                    class="selector" />
             </div>
         </div>
         <div class="rowdiv">
-            <div class="labeldiv"><label for="category">Category: </label></div>
+            <div class="labeldiv"><label for="category">{{isSplit? 'Primary ':''}}Category: </label></div>
             <div class="valuediv">
                 <p-select [options]="categories" [(ngModel)]="category" name="category" optionLabel="name"
-                    (onChange)="loadSubs()" required class="selector"/>
+                    (onChange)="loadSubs()" required class="selector" dataKey="id"/>
             </div>
         </div>
         <div class="rowdiv">
-            <div class="labeldiv"><label for="subcategory">Subcategory: </label></div>
+            <div class="labeldiv"><label for="subcategory">{{isSplit? 'Primary ':''}}Subcategory: </label></div>
             <div class="valuediv">
                 <p-select [options]="subcategories" [(ngModel)]="expense.subcategory" name="subcategory"
-                    optionLabel="name" required class="selector"/>
+                    optionLabel="name" required class="selector" dataKey="id"/>
             </div>
         </div>
         <div class="rowdiv">
-            <div class="labeldiv"><label for="price">Amount: </label></div>
-            <div class="valuediv"><p-inputnumber [(ngModel)]="expense.amount" inputId="amount" mode="decimal"
-                    [minFractionDigits]="2" [maxFractionDigits]="2" name="amount" required /></div>
-        </div>
-        <div class="rowdiv">
-            <div class="labeldiv"><label for="notes">Notes: </label></div>
+            <div class="labeldiv"><label for="notes">{{isSplit? 'Primary ':''}}Notes: </label></div>
             <div class="valuediv">
                 <input type="text" pInputText [(ngModel)]="expense.notes" name="notes" />
             </div>
         </div>
+        @if (!isSplit) {
+        <div class="rowdiv">
+            <div class="labeldiv"><label for="amount">Amount: </label></div>
+            <div class="valuediv"><p-inputnumber [(ngModel)]="expense.amount" inputId="amount" mode="decimal"
+                    [minFractionDigits]="2" [maxFractionDigits]="2" name="amount" required /></div>
+            <p-button label="Split" (onClick)="enableSplit()" size="small" severity="contrast"/>
+        </div>
+        }
+        @if (isSplit) {
+        <div class="rowdiv">
+            <div class="labeldiv"><label for="remain">Primary Amt: </label></div>
+            <div class="valuediv">{{expense.amount | currency}}</div>
+        </div>
+        <div class="rowdiv">
+            <div class="labeldiv"><label for="total">Total: </label></div>
+            <div class="valuediv"><p-inputnumber [(ngModel)]="total" inputId="total" mode="decimal"
+                    [minFractionDigits]="2" [maxFractionDigits]="2" name="total" required /></div>
+            <p-button label="Unsplit" (onClick)="removeSplit()" size="small" severity="contrast"/>
+        </div>
+        }
+        @if (isSplit) {
+            @for (split of splits; track $index) {
+            <div ngClass="splitdiv">
+                <div class="rowdiv">
+                    <div class="labeldiv"><label for="splitcategory">Split {{$index + 1}} Category: </label></div>
+                    <div class="valuediv">
+                        <p-select [options]="categories" [(ngModel)]="split.category" name="splitcategory" optionLabel="name"
+                            (onChange)="loadSplitSubs($index)" required class="selector" />
+                    </div>
+                </div>
+                <div class="rowdiv">
+                    <div class="labeldiv"><label for="splitsubcategory">Split {{$index + 1}} Subcategory: </label></div>
+                    <div class="valuediv">
+                        <p-select [options]="split.subcategories" [(ngModel)]="split.subcategory" name="splitsubcategory"
+                            optionLabel="name" required class="selector" />
+                    </div>
+                </div>
+                <div class="rowdiv">
+                    <div class="labeldiv"><label for="splitamount">Split {{$index + 1}} Amount: </label></div>
+                    <div class="valuediv"><p-inputnumber [(ngModel)]="split.amount" inputId="splitamount" mode="decimal"
+                            [minFractionDigits]="2" [maxFractionDigits]="2" name="splitamount" required (ngModelChange)="updateRemain()"/></div>
+                </div>
+                <div class="rowdiv">
+                    <div class="labeldiv"><label for="notes">Split {{$index + 1}} Notes: </label></div>
+                    <div class="valuediv">
+                        <input type="text" pInputText [(ngModel)]="split.notes" name="notes" />
+                    </div>
+                </div>
+            </div>
+
+            }
+        }
 
         <br />
         <div style="text-align: center;">
-            <p-button type="submit" [disabled]="!expenseForm.form.valid">Save</p-button>
-            <p-button label="Back/Cancel" (click)="onCancel()" />
+            <p-button type="submit" [disabled]="!expenseForm.form.valid" severity="success">Save</p-button>
+            <p-button label="Back/Cancel" (click)="onCancel()" severity="warn"/>
         </div>
+        <p-button label="check" (onClick)="check()" />
     </div>
 </form>
