--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,8 @@ h1{
     font-size: 16pt;
 }
 .rowdiv{
-    display: block;
+    display: flex;
+    align-items: center;
 }
 .labeldiv{
     display: inline-block;
