--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <main class="main">
   <div class="content">      
-    <p-menubar [model]="items" [style]="{'width': '400px'}"/>
+    <div style="display:flex">
+      <img src="logo-192x192.png" height="50" width="50"/>
+      <p-menubar [model]="items" [style]="{'width': '400px'}"/>
+    </div>
     <p-confirmdialog />
     <p-toast position="top-center"/>
   </div>
