added account mgmt, fixed date

--- a/src/app/component/category-form/category-form.component.html
+++ b/src/app/component/category-form/category-form.component.html
@@ -24,7 +24,7 @@
         <br />
         <div style="text-align: center;">
             <p-button type="submit" [disabled]="!payeeForm.form.valid">Save</p-button>
-            <p-button label="Back/Cancel" (click)="onCancel()" severity="contrast"/>
+            <p-button label="Back/Cancel" [routerLink]="['/categoryList']" severity="contrast"/>
         </div>
     </div>
 </form>
