--- a/src/app/component/payee-form/payee-form.component.html
+++ b/src/app/component/payee-form/payee-form.component.html
@@ -37,7 +37,7 @@
         <br />
         <div style="text-align: center;">
             <p-button type="submit" [disabled]="!payeeForm.form.valid">Save</p-button>
-            <p-button label="Back/Cancel" (click)="onCancel()" />
+            <p-button label="Back/Cancel" [routerLink]="['/payeeList']" />
         </div>
     </div>
 </form>
