--- a/src/app/component/expense-list/expense-list.component.html
+++ b/src/app/component/expense-list/expense-list.component.html
@@ -4,7 +4,7 @@
         <p-button (click)="clearFilters()" label="Clear" size="small" severity="contrast" pTooltip="Clear Filters"/>
         <p-float-label >
         <label for="month">Month:</label>
-        <p-select [options]="months" [(ngModel)]="expenseService.expenseFilters.month" (onChange)="monthChanged()" 
+        <p-select [options]="months" [(ngModel)]="getFilters().month" (onChange)="monthChanged()" 
             name="month" [showClear]="true" placeholder="Select"
             styleClass="w-full" />
         </p-float-label>
@@ -13,12 +13,14 @@
         Total: {{totalAmount | currency: 'USD'}}
         </span>
         <p-paginator (onPageChange)="pageChange($event)" [showCurrentPageReport]="true"
-            currentPageReportTemplate="Showing {first} to {last} of {totalRecords}" [first]="expenseService.expenseFilters.first"
-            [rows]="expenseService.expenseFilters.rows" [totalRecords]="total" [rowsPerPageOptions]="[10, 25, 50]" />
+            currentPageReportTemplate="Showing {first} to {last} of {totalRecords}" [first]="getFilters().first"
+            [rows]="getFilters().rows" [totalRecords]="total" [rowsPerPageOptions]="[10, 25, 50]" />
+        <label for="future">Hide Future:</label>
+        <p-toggleswitch [(ngModel)]="getFilters().hideFuture" (onChange)="pageChange(null)"/>
     </div>
 @defer (when monthsLoaded) {
     <p-table [value]="expenses" [paginator]="false" [lazy]="true" #myTable dataKey="id"
-        (onLazyLoad)="pageChange($event)" [sortField]="expenseService.expenseFilters.sortField" [sortOrder]="expenseService.expenseFilters.sortOrder">
+        (onLazyLoad)="pageChange($event)" [sortField]="getFilters().sortField" [sortOrder]="getFilters().sortOrder">
         <ng-template #header>
             <tr>
                 <th pSortableColumn="date">Date <p-sortIcon field="date" /></th>
@@ -31,7 +33,7 @@
                     <p-columnFilter field="account" matchMode="equals" display="menu" 
                         [showMatchModes]="false" [showOperator]="false" [showAddButton]="false">
                         <ng-template #filter let-value let-filter="filterCallback">
-                            <p-select [(ngModel)]="expenseService.expenseFilters.account" [options]="accounts" 
+                            <p-select [(ngModel)]="getFilters().account" [options]="accounts" 
                             (onChange)="filter($event.value)"
                                 placeholder="Select One" styleClass="w-full" />
                         </ng-template>
@@ -41,7 +43,7 @@
                     <p-columnFilter field="category" matchMode="equals"  display="menu" [showMatchModes]="false"
                         [showOperator]="false" [showAddButton]="false">
                         <ng-template #filter let-value let-filter="filterCallback">
-                            <p-select [(ngModel)]="expenseService.expenseFilters.category" [options]="categories" 
+                            <p-select [(ngModel)]="getFilters().category" [options]="categories" 
                             (onChange)="filter($event.value)"
                                 placeholder="Select One" styleClass="w-full" />
                         </ng-template>
@@ -51,7 +53,7 @@
                     <p-columnFilter field="subcategory" matchMode="equals" display="menu"  [showMatchModes]="false"
                         [showOperator]="false" [showAddButton]="false">
                         <ng-template #filter let-value let-filter="filterCallback">
-                            <p-select [(ngModel)]="expenseService.expenseFilters.subcategory" [options]="subcategories"
+                            <p-select [(ngModel)]="getFilters().subcategory" [options]="subcategories"
                                 (onChange)="filter($event.value)" placeholder="Select One" styleClass="w-full" />
                         </ng-template>
                     </p-columnFilter>
