--- a/src/app/component/account-form/account-form.component.html
+++ b/src/app/component/account-form/account-form.component.html
@@ -1,6 +1,6 @@
-
+<div class="title">{{title}}</div>
 <form (ngSubmit)="onSubmit()" #payeeForm="ngForm">
-    <div style="width: 500px;">
+    <div style="width: 500px; padding-top: 10px;">
         
         <div class="rowdiv">
             <div class="labeldiv"><label for="id">Id: </label></div>
