--- a/src/app/component/category-list/category-list.component.html
+++ b/src/app/component/category-list/category-list.component.html
@@ -9,7 +9,7 @@
         <th>Description</th>
         <th>Budget</th>
         <th></th>
-        <th>In Use</th>
+        <th>Delete</th>
     </tr>
 
     @for (category of categories; track $index) {
