--- a/src/app/component/subcategory-form/subcategory-form.component.html
+++ b/src/app/component/subcategory-form/subcategory-form.component.html
@@ -1,11 +1,11 @@
-
+<div class="title">{{title}}</div>
 <form (ngSubmit)="onSubmit()" #payeeForm="ngForm">
-    <div style="width: 500px;">
-        
+    <div style="width: 500px; padding-top: 10px;">
+
         <div class="rowdiv">
             <div class="labeldiv"><label for="id">Id: </label></div>
             <div class="valuediv">
-                <input type="text" pInputText [(ngModel)]="subcategory.id" name="id" [disabled]="editMode"/>
+                <input type="text" pInputText [(ngModel)]="subcategory.id" name="id" [disabled]="editMode" />
             </div>
         </div>
         <div class="rowdiv">
@@ -18,7 +18,8 @@
             <div class="labeldiv"><label for="category">Category: </label></div>
             <div class="valuediv">
                 <p-select [options]="categories" [(ngModel)]="subcategory.category" name="category" optionLabel="name"
-                    required class="selector"/>
+                    required class="selector" />
+                <p-button label="New" (onClick)="forward('categoryForm')" size="small" pTooltip="New Category" />
             </div>
         </div>
         <div class="rowdiv">
@@ -29,15 +30,19 @@
         </div>
         <div class="rowdiv">
             <div class="labeldiv"><label for="budget">Budget: </label></div>
-            <div class="valuediv"><p-inputnumber [(ngModel)]="subcategory.budget" inputId="budget" mode="decimal"
-                    [minFractionDigits]="2" [maxFractionDigits]="2" name="budget" />
-            <p-button label="Clear" (onClick)="subcategory.budget = null" size="small" severity="info" />
+            <div class="valuediv">
+                <div class="p-field-with-icon">
+                    <i class="pi pi-dollar custom-input-icon"></i>
+                    <p-inputnumber [(ngModel)]="subcategory.budget" inputId="budget" mode="decimal"
+                        [minFractionDigits]="2" [maxFractionDigits]="2" name="budget" />
+                </div>
+                <p-button label="Clear" (onClick)="subcategory.budget = null" size="small" severity="info" />
             </div>
         </div>
         <br />
         <div style="text-align: center;">
             <p-button type="submit" [disabled]="!payeeForm.form.valid">Save</p-button>
-            <p-button label="Back/Cancel" (click)="onCancel()" severity="contrast"/>
+            <p-button label="Back/Cancel" (click)="back()" severity="contrast" />
         </div>
     </div>
 </form>
