--- a/src/app/component/category-form/category-form.component.html
+++ b/src/app/component/category-form/category-form.component.html
@@ -1,17 +1,17 @@
-
+<div class="title">{{title}}</div>
 <form (ngSubmit)="onSubmit()" #payeeForm="ngForm">
-    <div style="width: 500px;">
-        
+    <div style="width: 500px; padding-top: 10px;">
+
         <div class="rowdiv">
             <div class="labeldiv"><label for="id">Id: </label></div>
             <div class="valuediv">
-                <input type="text" pInputText [(ngModel)]="category.id" name="id" [disabled]="editMode" required/>
+                <input type="text" pInputText [(ngModel)]="category.id" name="id" [disabled]="editMode" required />
             </div>
         </div>
         <div class="rowdiv">
             <div class="labeldiv"><label for="name">Name: </label></div>
             <div class="valuediv">
-                <input type="text" pInputText [(ngModel)]="category.name" name="name" required/>
+                <input type="text" pInputText [(ngModel)]="category.name" name="name" required />
             </div>
         </div>
         <div class="rowdiv">
@@ -22,15 +22,19 @@
         </div>
         <div class="rowdiv">
             <div class="labeldiv"><label for="budget">Budget: </label></div>
-            <div class="valuediv"><p-inputnumber [(ngModel)]="category.budget" inputId="budget" mode="decimal"
-                    [minFractionDigits]="2" [maxFractionDigits]="2" name="budget" />
-            <p-button label="Clear" (onClick)="category.budget = null" size="small" severity="info" />
-        </div>
+            <div class="valuediv">
+                <div class="p-field-with-icon">
+                    <i class="pi pi-dollar custom-input-icon"></i>
+                    <p-inputnumber [(ngModel)]="category.budget" inputId="budget" mode="decimal" [minFractionDigits]="2"
+                        [maxFractionDigits]="2" name="budget" />
+                </div>
+                <p-button label="Clear" (onClick)="category.budget = null" size="small" severity="info" />
+            </div>
         </div>
         <br />
         <div style="text-align: center;">
             <p-button type="submit" [disabled]="!payeeForm.form.valid">Save</p-button>
-            <p-button label="Back/Cancel" [routerLink]="['/categoryList']" severity="contrast"/>
+            <p-button label="Back/Cancel" (click)="back()" severity="contrast" />
         </div>
     </div>
 </form>
